--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@expo/config-plugins": "^4.0.6",
-    "fs-extra": "^10.0.0"
+    "fs-extra": "^10.0.0",
+    "xcode": "^3.0.1"
   }
 }
