--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test": "expo-module test",
     "prepare": "expo-module prepare",
     "prepublishOnly": "expo-module prepublishOnly",
-    "expo-module": "expo-module"
+    "expo-module": "expo-module",
+    "copy-caf-src": "cp -R ./src/caf ./build"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
