--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "expo-combateafraude",
+  "author": "ONZ Software",
   "version": "1.0.0",
-  "main": "src/index.ts",
+  "main": "build/index.js",
   "license": "MIT",
-  "homepage": "http://github.com/thalesog/expo-combateafraude#readme",
+  "homepage": "http://github.com/onz-software/expo-combateafraude#readme",
   "repository": {
     "type": "git",
-    "url": "git+http://github.com/thalesog/expo-combateafraude.git"
+    "url": "git+http://github.com/onz-software/expo-combateafraude.git"
   },
   "bugs": {
-    "url": "http://github.com/thalesog/expo-combateafraude/issues"
+    "url": "http://github.com/onz-software/expo-combateafraude/issues"
   },
   "scripts": {
     "build": "expo-module build",
     "clean": "expo-module clean",
     "test": "expo-module test",
-    "prepare": "expo-module prepare",
+    "prepare": "expo-module prepare && yarn copy-caf-src",
     "prepublishOnly": "expo-module prepublishOnly",
     "expo-module": "expo-module",
     "copy-caf-src": "cp -R ./src/caf ./build"
@@ -26,7 +27,6 @@
   },
   "dependencies": {
     "@expo/config-plugins": "^4.0.6",
-    "fs-extra": "^10.0.0",
-    "xcode": "^3.0.1"
+    "fs-extra": "^10.0.0"
   }
 }
