--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "version": "1.3.1",
   "main": "build/index.js",
   "license": "MIT",
-  "homepage": "http://github.com/onz-software/expo-combateafraude#readme",
+  "homepage": "https://www.npmjs.com/package/expo-combateafraude",
   "repository": {
     "type": "git",
-    "url": "https://github.com/onz-software/expo-combateafraude.git"
+    "url": "https://github.com/ONZ-Software/expo-combateafraude.git"
   },
   "bugs": {
-    "url": "http://github.com/onz-software/expo-combateafraude/issues"
+    "url": "https://github.com/ONZ-Software/expo-combateafraude/issues"
   },
   "scripts": {
-    "build": "expo-module build && yarn copy-files",
+    "build": "expo-module prepare && yarn copy-files",
     "clean": "expo-module clean",
     "test": "expo-module test",
     "prepare": "husky install",
@@ -23,18 +23,19 @@
     "semantic-release": "semantic-release"
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.0.1",
-    "@commitlint/config-conventional": "^16.0.0",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "9.0.0",
     "@types/fs-extra": "^9.0.13",
     "cpx": "^1.5.0",
-    "expo-module-scripts": "^2.0.0",
-    "husky": "^7.0.4",
-    "semantic-release": "^18.0.1"
+    "expo-module-scripts": "^2.1.1",
+    "husky": "^8.0.1",
+    "semantic-release": "^19.0.5"
   },
   "dependencies": {
-    "@expo/config-plugins": "^4.1.5",
-    "fs-extra": "^10.0.0"
+    "@expo/config-plugins": "^5.0.1",
+    "fs-extra": "^10.1.0"
   }
 }
